<resources>

    <string name="app_name">XYZ READER</string>
    <string name="welcome_xyz_reader">Welcome to XYZ Reader!</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>

    <string name="up">Up</string>
    <string name="article_image">Article Image</string>
    <string name="loading_in_progress">Loading in progress</string>

</resources>
